style(package): Stop toolbar jiggle on different block style dropdown selection; align dropdown text
affects: ak-editor-ui

--- a/packages/ak-editor-ui/src/ChromeExpanded/styles.global.less
+++ b/packages/ak-editor-ui/src/ChromeExpanded/styles.global.less
@@ -79,8 +79,8 @@
   align-items: center;
   display: flex;
   height: 40px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 8px;
+  padding-right: 8px;
   // Place toolbar content above the content.
   position: relative;
   z-index: 2;
